Add Gradle build as equivalent to Maven (pom.xml)
Add build.gradle, settings.gradle, gradle.properties and the Gradle
wrapper, wired to mirror the existing Maven build: same Quarkus platform
BOM (3.20.6.2), security-patch BOMs, ANTLR generation, Lombok/ObjectBox
annotation processing and ObjectBox bytecode transformation.

Document Gradle usage in README and ignore build/ and .gradle/ output.